cluster/infrastructure/embeddings/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: embeddings
    app.kubernetes.io/version: becdeee
  name: embeddings
spec:
  selector:
    app.kubernetes.io/name: embeddings
  ports:
  - name: http-embeddings
    port: 8080
    targetPort: 8080
